# cppGipoBackend

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: guiMain.cpp  main.cpp
libs/: CMakeLists.txt
libs/include/: gipoI2c.hpp  gipoI2cBus.hpp  gipoManager.hpp  gipoPwmPin.hpp  gui.hpp  i2cDevice.hpp  pwm.hpp
libs/src/: gipoI2c.cpp  gipoI2cBus.cpp  gipoManager.cpp  gipoPwmPin.cpp  gui.cpp  i2cDevice.cpp  pwm.cpp
test/: CMakeLists.txt  i2cTest.cpp
